2009-10-25  Chong Yidong  <cyd@stupidchicken.com>

	* keyboard.c (read_char_x_menu_prompt): Don't demand a prompt
	string in menu maps (Bug#4471).

2009-10-24  Chong Yidong  <cyd@stupidchicken.com>

	* nsfns.m (ns_set_name, ns_set_name_as_filename): Don't call
	FRAME_NS_VIEW on terminal frames (Bug#4765).

2009-10-24  Andreas Schwab  <schwab@linux-m68k.org>

	* dbusbind.c (xd_retrieve_arg): Handle DBUS_TYPE_INTnn and
	DBUS_TYPE_UINTnn separately to get proper sign extension.

	* dired.c (Ffile_attributes): Simplify now that FIXNUM_OVERFLOW_P
	can properly handle unsigned types.
	(make_uid, make_gid): Removed.

	* lisp.h (FIXNUM_OVERFLOW_P): Fix last change to handle unsigned
	types again.

	* sysdep.c (procfs_ttyname): Fix sprintf format to match argument
	type.
	(system_process_attributes): Likewise.

2009-10-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* keymap.c (Fmake_sparse_keymap): Purecopy the name.

	* eval.c (Fautoload): Purecopy the filename.  Simplify.

	* category.c (Fdefine_category): Purecopy docstring.

2009-10-23  Andreas Schwab  <schwab@linux-m68k.org>

	* lisp.h (FIXNUM_OVERFLOW_P): Remove cast to avoid overflow.

	* puresize.h (PURESIZE_RATIO): Decrease to 11/7.

2009-10-23  Chong Yidong  <cyd@stupidchicken.com>

	* window.c (Fwindow_edges, Fwindow_pixel_edges)
	(Fwindow_inside_edges, Fwindow_inside_pixel_edges): Doc fix
	(Bug#4775).

2009-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fileio.c (syms_of_fileio): Initialize Vdirectory_sep_char.
	(init_fileio_once):
	* lisp.h (init_fileio_once): Remove.
	* emacs.c (main): Don't call init_fileio_once.

2009-10-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* puresize.h (BASE_PURESIZE): Increase to 1430000.

2009-10-21  Andreas Schwab  <schwab@linux-m68k.org>

	* doprnt.c (doprnt): Fix overflow check.

2009-10-21  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (x_term_init): Remove XSynchronize call done for debugging.

	* xterm.h (x_wait_for_event): Declare it.
